# PyscriptSQL

./: .flake8  .isort.cfg  nano.16345.save  pyproject.toml
src/: config.py  main.py  script.py
src/api/: hh_api.py
src/database/: db_manager.py  utils.py
tests/: test_db.py
